@@ -1,3 +1,9 @@
+2017-05-16  Adrian Perez de Castro  <aperez@igalia.com>
+
+        Unreviewed, adding myself to contributors.json
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2017-05-16  Claudio Saavedra  <csaavedra@igalia.com>
 
         [GTK] Tests that always pass when run alone, but fail in the bots
